# widar

./: .gitmodules  Cargo.toml  all.html  crates.js  fn.estimate_distance.html  fn.generate_bar.html  fn.generate_signal_indicator.html  fn.main.html  help.html  index.html  search-index.js  settings.html  sidebar-items.js  src-files.js  struct.NumSignalBars.html
.github/workflows/: docs.yml
src/: main.rs
src/widar/: main.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/ops/deref/: trait.Deref.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
widar/: index.html  struct.NumSignalBars.html
