[package]
name = "widar"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = "4.5.4"
colored = "2.1.0"
prettytable-rs = "0.10.0"
tokio = { version = "1.28.0", features = ["full"] }
tokio-wifiscanner = { path = "./tokio-wifiscanner", version = "0.2.2" }
regex = "1"
itertools = "0.13.0"

[dev-dependencies]
regex = "1"
itertools = "0.13.0"
tokio = { version = "1.28.0", features = ["macros", "rt", "process"] }
